1999-10-25  Andreas Jaeger  <aj@suse.de>

	* internals.h: Remove K&R compatibility.
	* no-tsd.c: Likewise.
	* semaphore.h: Likewise.
	* signals.c: Likewise.
	* sysdeps/pthread/bits/libc-tsd.h: Likewise.
	* sysdeps/unix/sysv/linux/bits/sigthread.h: Likewise.
	* weaks.c: Likewise.

1999-10-21  Xavier Leroy  <Xavier.Leroy@inria.fr>

	* linuxthreads/pthread.c: For i386, wrap pthread_handle_sigrestart
	and pthread_handle_sigcancel with functions that restore
	%gs from the signal context.  For each signal handling function,
	two wrappers are required, one for a non-RT signal and one for
	a RT signal.
	* linuxthreads/signal.c: For i386, add code to restore %gs
	from the signal context in pthread_sighandler and
	pthread_sighandler_rt.

1999-10-17  Ulrich Drepper  <drepper@cygnus.com>

	* internals.h (PTHREAD_START_ARGS_INITIALIZER): Add cast.

1999-10-14  Ulrich Drepper  <drepper@cygnus.com>

	* pthread.c (__pthread_initial_thread): Pass argument to
	PTHREAD_START_ARGS_INITIALIZER.
	(__pthread_manager_thread): Likewise.

	* internals.h (PTHREAD_START_ARGS_INITIALIZER): Add parameter to
	initialize function.

	* manager.c (pthread_handle_create): Remove p_startfct initialization.

	* internals.h (_pthread_descr_struct): We don't need p_startfct field.

1999-10-12  Ulrich Drepper  <drepper@cygnus.com>

	* internals.h: Correct return types for __libc_read and __libc_write.

1999-10-09  Andreas Jaeger  <aj@suse.de>

	* internals.h: Add __new_sem_post to get prototype in
	manager.c; include semaphore.h for needed types.

1999-10-08  Ulrich Drepper  <drepper@cygnus.com>

	* manager.c (__pthread_manager) [REQ_POST]: Use __new_sem_post
	directly instead of calling sem_post which should not be necessary
	but is faster and might help in some case to work around problems.
	Patch by khendricks@ivey.uwo.ca [libc/1382].

1999-10-08  Andreas Schwab  <schwab@suse.de>

	* sysdeps/pthread/Subdirs: New file.
	* Implies: Removed.

1999-10-07  Ulrich Drepper  <drepper@cygnus.com>
